--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "size": "size-limit",
     "upgrade:check": "ncu",
     "upgrade:apply": "ncu -a",
-    "dev": "vue build ./src/docs/docs.vue --config ./src/docs/build.config.js --host 0.0.0.0",
-    "build": "vue build ./src/index.js --config ./build.config.js --dist ./dist/ --prod --lib",
-    "docs:build": "vue build ./src/docs/docs.vue --config ./src/docs/build.config.js --dist ./docs/ --prod",
+    "dev": "poi build ./src/docs/docs.vue --config ./src/docs/build.config.js --host 0.0.0.0",
+    "build": "poi build ./src/index.js --config ./build.config.js --dist ./dist/ --prod --lib",
+    "docs:build": "poi build ./src/docs/docs.vue --config ./src/docs/build.config.js --dist ./docs/ --prod",
     "docs:serve": "open http://localhost:5000/docs/ && serve ./",
     "compile": "npm run build -- --disable-compress",
     "test": "jest"
@@ -35,6 +35,7 @@
   "license": "MIT",
   "devDependencies": {
     "babel-jest": "^21.2.0",
+    "babel-preset-vue": "^2.0.2",
     "babel-preset-vue-app": "^1.3.1",
     "jest": "^21.2.1",
     "npm-check-updates": "^2.13.0",
